fixed weird alignment

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -22,7 +22,7 @@
 .NavBar nav ul li {
   display: inline-block;
   margin-right: 8px;
-  font-size: .9rem;
+  font-size: .8rem;
 }
 .NavBar nav ul li a {
   text-decoration: none;
